--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.14.0
   firebase_auth: ^3.3.12
+  fluttertoast: ^8.0.9
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
