--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.12
   fluttertoast: ^8.0.9
   cloud_firestore:
+  firebase_storage: ^10.2.11
 
 dev_dependencies:
   flutter_test:
